Adds conditional checks for gemspecs

--- a/action.yml
+++ b/action.yml
@@ -16,11 +16,21 @@ runs:
   steps:
     - name: Check for ${{ inputs.library-name }}  dependency
       shell: bash
-      id: dependency
+      id: gemfile
       run: |
-        echo "COUNT=$(grep -s ${{ inputs.gem-name }} Gemfile* | wc -l)" >> $GITHUB_OUTPUT
+        echo "COUNT=$(grep ${{ inputs.gem-name }} Gemfile* | wc -l)" >> $GITHUB_OUTPUT
+    - name: Check if .gemspec exists
+      if: steps.gemfile.outputs.COUNT == 0
+      id: gemspec
+      run: |
+        # Need to set shell opts to avoid returning the glob string in the array
+        shopt -s nullglob
+        gemspecs=(*.gemspec)
+        if (( ${#gemspecs[@]} == 1)); then
+          echo "COUNT=$(grep memcached ${gemspecs[0]} | wc -l)"
+        fi
     - name: Install ${{ inputs.required-library }}
-      if: steps.dependency.outputs.COUNT > 0
+      if: ${{ steps.gemfile.outputs.COUNT > 0 || steps.gemspec.outputs.COUNT > 0 }}
       shell: bash
       run: |
         sudo ${{ inputs.package-manager }} -y install ${{ inputs.required-library }}
